# IITM-BS-AI-Assistant-

./: README.md  pyproject.toml  requirements.txt
backend/: index.py  main.py
faiss_index/: index.faiss  index.pkl
frontend/: app.py
